<resources>
    <string name="app_name">Edu.Share</string>

    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>

    <string name="view_chat">View Chat</string>
    <string name="view__favourites">View Favorites</string>
    <string name="view_download">View Download</string>
    <string name="view_bookmark">View Bookmark</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="geography">Geography</string>
    <string name="favourites">Favorites</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="web">Web</string>
    <string name="home">Home</string>
    <string name="title_activity_chat_section">ChatSection</string>
    <string name="user_name">User Name</string>
    <string name="email">EMAIL</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>

    <string-array name="role">
        <item>Select Role</item>
        <item>Student</item>
        <item>Tutor</item>
    </string-array>

    <string-array name="peer">
        <item>Peer reviewer?</item>
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string-array name="score">
        <item>Choose Review Score</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="category">
        <item>Choose a Category</item>
        <item>Geology</item>
        <item>Biology</item>
        <item>Computer Science</item>
        <item>Chemistry</item>
    </string-array>


    <string name="uploadImages">Set your image</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="toast_message">Playback completed.</string>
    <string name="pick_file">Pick file</string>
    <string name="upload_file">Upload file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>


</resources>
