<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#EBE9E6">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="136dp"
            android:layout_height="89dp"
            android:padding="5dp"
            tools:srcCompat="@drawable/deji" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="full name"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:text="dejeon.battick11@gmail.com"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="Computing"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_chat_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_chat"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_favorite_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view__favourites"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_rate_review_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Documents for Review"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linear_scale_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_downward_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_download"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_file_upload_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Document"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_my_Uploads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_view_headline_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View My Uploads"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_linear_scale_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_edit_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#F7EEF7">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_lock_outline_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log out"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>



</LinearLayout>